# tg-bot-fastapi-aiogram

./: README.md  bot.py  main.py  pyproject.toml  redis_pool.py  routes.py  settings.py  system.py
handlers/: __init__.py  messages.py
